# pineapple-icon-picker

./: CMakeLists.txt  README.md  README.zh_CN.md  iconmodel.cpp  iconmodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pineapple-icon-picker.pro
